src/objects/LineItem1__c/LineItem1__c.object-meta.xml
<CustomObject>
    <label>LineItem1</label>
    <nameField>
        <label>LineItem1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LineItems1</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>