src/objects/LineItem1__c/fields/LineItem_Desc__c.field-meta.xml
<CustomField>
    <fullName>LineItem_Desc__c</fullName>
    <label>LineItem Desc</label>
    <type>TextArea</type>
</CustomField>