src/objects/LineItem1__c/fields/LineItem_Price__c.field-meta.xml
<CustomField>
    <fullName>LineItem_Price__c</fullName>
    <label>LineItem Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>