src/objects/LineItem1__c/fields/LineItem_Stock__c.field-meta.xml
<CustomField>
    <fullName>LineItem_Stock__c</fullName>
    <label>LineItem Stock</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>