src/objects/LineItem1__c/fields/Merchandise__c.field-meta.xml
<CustomField>
    <fullName>Merchandise__c</fullName>
    <label>Merchandise1</label>
    <referenceTo>Merchandise1__c</referenceTo>
    <relationshipLabel>LineItems1</relationshipLabel>
    <relationshipName>LineItems1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>