src/objects/LineItem1__c/validationRules/Stock_shouldnt_exceed_Merchandise_stock.validationRule-meta.xml
<ValidationRule>
    <fullName>Stock_shouldnt_exceed_Merchandise_stock</fullName>
    <active>true</active>
    <errorConditionFormula>LineItem_Stock__c  &gt;  Merchandise__r.Merchandise_Stock__c</errorConditionFormula>
    <errorDisplayField>LineItem_Stock__c</errorDisplayField>
    <errorMessage>Stock should not be more than Merchandise stock</errorMessage>
</ValidationRule>